# wheel-picker

./: Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
