[package]
name = "wheel-picker"
description = "Simple cli tool to make and randomly pick from a wheel."
keywords = ["wheel", "random", "picker"]

version = "0.1.0"
edition = "2024"

license = "MIT"
readme = "./README.md"
repository = "https://github.com/not-a-cowfr/wheel-picker"
documentation = "https://docs.rs/wheel-picker"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = true

[dependencies]
clap = "4.5.51"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
