[package]
name = "wheel-picker"
description = "Simple cli tool to make and randomly pick from a wheel."
keywords = ["wheel", "random", "picker"]

version = "1.0.1"
edition = "2024"

license = "MIT"
readme = "./README.md"
repository = "https://github.com/not-a-cowfr/wheel-picker"
documentation = "https://docs.rs/wheel-picker"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = true

[dependencies]
clap = "4.5.51"
fastrand = "2.3.0"
nanoserde = { version = "*", default-features = false, features = [
	"std",
	"ron",
] }
